--- a/index.html
+++ b/index.html
@@ -9,34 +9,37 @@
   </head>
   <body>
 
-    <header>
-      <nav class="menu">
+<header>
+  <nav class="menu">
         <div class="menu-toggle" onclick="toggleMenu()">
           <div class="menu-bar"></div>
           <div class="menu-bar"></div>
           <div class="menu-bar"></div>
         </div>
-      <ul class="menu-list" id="menu-list">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Products</a></li>
-        <li><a href="#">About Us</a></li>
-        <li><h1 class="logo">Seaweed <br />
+
+       <div class="menu-list" id="menu-list"> 
+        <ul class="list">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Products</a></li>
+          <li><a href="#">About Us</a></li>
+          <li><h1 class="logo">Seaweed <br />
           Cosmetics</h1></li>
-        <li><a href="#">Contact</a></li>
-        <li><a href="#">Service</a></li>
-        <li class="icon">
-          <a href="#"
+          <li><a href="#">Contact</a></li>
+          <li><a href="#">Service</a></li>
+          <li class="icon">
+            <a href="#"
             ><img class="icon1" src="/imagens/Search.svg" alt="search"
           /></a>
-        </li>
-        <li class="icon">
-          <a href="#"
+          </li>
+          <li class="icon">
+            <a href="#"
             ><img class="icon2" src="/imagens/Shopping Bag.svg" alt="cart"
-          /></a>
-        </li>
+            /></a>
+          </li>
       </ul>
-    </nav>
-    </header>
+    </div>
+  </nav>
+</header>
 
     <main class="banner">
       <h6 class="banner__titulo">
